styles/globals.css
@font-face {
    font-family: HNR;
    src: url(../fonts/helveticaneue.ttf);
}

body {
    margin: 0;
    padding: 0;
    background-color: #F1F1EF;
    color: #0D0D0E;
    font-family: HNR;
    transition: color 0.2s ease-in-out;
    transition: background-color 0.2s ease-in-out;
}

.printButton {
    cursor: pointer;
}

.aboutButton {
    cursor: pointer;
}

.pageContent{
    padding-top: 45px;
}

.logoContainer {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    pointer-events: none;
}

.logo {
    height: fit-content; 
}

.slideshow {
    margin-top: 200px;
}

.logoDarkMode {
    display: none;
}

.logoMask {
    position: absolute;
    background-color: #F1F1EF;
    height: 100%;
    width: 100%;
}

.carouselContainer {
    margin-top: 20px;
    height: 100vh;
    display: flex; 
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
    padding-left: 10px;
    padding-right: 10px;
    overflow-x: scroll;
}

.carouselContainer img {
    display: inline-block;
    opacity: 0;
    width: 700px;
    padding: 50px;
} 

/* Float */
.hvr-float {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
  -webkit-transform: translateY(-8px);
  transform: translateY(-8px);
}

.carouselContainer .imageWrapper:nth-child(even) {
    z-index: 0;
    padding-right: 100px;
    padding-top: 350px;
}

.carouselContainer .imageWrapper:nth-child(odd) {
    z-index: 0;
    padding-right: 100px;
    padding-bottom: 350px;
}
.carouselContainer .imageWrapper:nth-child(22){
    margin-left: 400px;
}

/* random breakpoint */
@media (min-width: 700px) and (max-width: 800px) {
    .logo{
        width: 700px;
    }
}

/* random breakpoint */
@media (max-width: 699px) {
    .logo{
        width: 500px;
    }
}

/* Smallest screens possible */
@media (min-width: 200px) and (max-width: 299px) and (min-height: 500px) and (max-height: 653px){
    .logo{
        width: 250px;
    }

    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

/* Samsung Galaxy S8+ */
@media (min-width: 300px) and (max-width: 360px) and (min-height: 654px) and (max-height: 799px){
    .logo{
        width: 330px;
    }

    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

/* Samsung Phone S20 Ultra */
@media (min-width: 361px) and (max-width: 412px) and (min-height: 800px) and (max-height: 915px){
    .logo{
        width: 380px;
    }
    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

/* Smaller iPhone screens */
@media (min-width: 380px) and (max-width: 393px) and (min-height: 700px) and (max-height: 851px){
    .logo{
        width: 370px;
    }

    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }

    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

/* pre-iPhone 12 */
@media (min-width: 300px) and (max-width: 375px) and (min-height: 500px) and (max-height: 667px){
    .logo{
        width: 350px;
    }
    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }

    .carouselContainer .imageWrapper:nth-child(even){
        padding-bottom: 150px;
    }

    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

/* iPhone 12 */
@media (min-width: 376px) and (max-width: 390px) and (min-height: 668px) and (max-height: 895px){

    .logo{
        width: 370px;
    }
    
    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
    }
    
}

/* iPhone XR */
@media (min-width: 391px) and (max-width:500px) and (min-height: 852px) and (max-height: 900px ){
    .logo{
        width: 370px;
    }

    .carouselContainer img{
        width: 500px;
        padding-right: 50px;
    }
    .carouselContainer .imageWrapper:nth-child(1){
        padding-top: 250px;
        margin-left: -100px;
    }

    .carouselContainer .imageWrapper:nth-child(22){
        padding-top: 200px;
        padding-right: 0px;
    }
}

